--- a/index.html
+++ b/index.html
@@ -12,12 +12,89 @@
 <body>
     <header class="header">
         <a href="index.html">
-            <img class="header_logo" src="/img/logo.png" alt="logo">
+            <img class="header__logo" src="/img/logo.png" alt="logo">
         </a>
     </header>
     <nav class="navegacion">
-        <a class="navegacion_enlace--activo" href="index.html">Tienda</a>
-        <a class="navegacion_enlace" href="nosotros.html">Nosotros</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
+        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
+    <div class="contenedor">
+        <h1>Nuestros Productos</h1>
+        <div class="productos">
+        <div class="producto">
+            <img src="./img/1.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/2.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/3.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/4.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/5.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/6.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/7.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/8.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/9.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/10.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/11.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/12.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/13.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="producto">
+            <img src="./img/14.jpg" alt="" class="producto__imagen">
+            <p class="producto__nombre">VueJs</p>
+            <p class="producto__precio">$25</p>
+        </div>
+        <div class="grafico--camisas"></div>
+        <div class="grafico--node"></div>
+    </div>
+    </div>
 </body>
 </html>
